--- a/packages/multiroom_audio.yaml
+++ b/packages/multiroom_audio.yaml
@@ -7,112 +7,107 @@ homeassistant:
     media_player.mpd:
       friendly_name: "Snapcast Source"
       icon: mdi:speaker-wireless
-    media_player.snapcast_client_00c141020928:
-      friendly_name: "Mark's Bedroom Snapcast"
-    media_player.snapcast_client_4ceb42cb0886:
-      friendly_name: shochu Snapcast
-    media_player.snapcast_client_74c246247a4d:
-      friendly_name: Library Snapcast
-    media_player.snapcast_client_80d21d413dff:
-      friendly_name: Kitchen Snapcast
-    media_player.snapcast_client_b827eb464b04:
+    media_player.snapcast_client_study:
       friendly_name: Study Snapcast
-    media_player.snapcast_client_b827eb7739b3:
+    media_player.snapcast_client_kitchen2:
+      friendly_name: Kitchen Snapcast
+    media_player.snapcast_client_lounge:
       friendly_name: Lounge Snapcast
-    media_player.snapcast_client_b827eb976047:
+    media_player.snapcast_client_library:
+      friendly_name: Library Snapcast
+    media_player.snapcast_client_ballroom:
       friendly_name: Ballroom Snapcast
+    media_player.snapcast_client_outside:
+      friendly_name: Outside Snapcast
+    media_player.snapcast_client_bedroommark:
+      friendly_name: "Mark's Bedroom Snapcast"
+    media_player.snapcast_client_9cb6d08b2a6f:
+      friendly_name: Canard Snapcast
 
-input_slider:
-    snapcast_client_b827eb464b04:
-      name: Study
+input_number:
+    snapcast_client_study:
+      name: Study Volume
       icon: mdi:printer
       min: 0
       max: 100
-      initial: 80
-    snapcast_client_80d21d413dff:
-      name: Kitchen Snapcast
+    snapcast_client_kitchen2:
+      name: Kitchen Volume
       icon: mdi:stove
       min: 0
       max: 100
-      initial: 80
-    snapcast_client_b827eb7739b3:
-      name: Lounge Snapcast
+    snapcast_client_lounge:
+      name: Lounge Volume
       icon: mdi:sofa
       min: 0
       max: 100
-      initial: 80
-    snapcast_client_74c246247a4d:
-      name: Library
+    snapcast_client_library:
+      name: Library Volume
       icon: mdi:library
       min: 0
       max: 100
-      initial: 80
-    snapcast_client_b827eb976047:
-      name: Ballroom Snapcast
+    snapcast_client_ballroom:
+      name: Ballroom Volume
       icon: mdi:projector
       min: 0
       max: 100
-      initial: 80
-    snapcast_client_00c141020928:
-      name: "Mark's Bedroom Snapcast"
+    snapcast_client_bedroommark:
+      name: "Mark's Bedroom Volume"
       icon: mdi:account
       min: 0
       max: 100
-      initial: 80
-    snapcast_client_4ceb42cb0886:
-      name: shochu Snapcast
+    snapcast_client_9cb6d08b2a6f:
+      name: Canard Volume
       icon: mdi:laptop-chromebook
       min: 0
       max: 100
-      initial: 80
 
 automation:
-- alias: "Update media_player volume"
+- alias: update_media_player_volume
   trigger:
     platform: state
     entity_id:
-      - input_slider.snapcast_client_00c141020928
-      - input_slider.snapcast_client_4ceb42cb0886
-      - input_slider.snapcast_client_74c246247a4d
-      - input_slider.snapcast_client_80d21d413dff
-      - input_slider.snapcast_client_b827eb464b04
-      - input_slider.snapcast_client_b827eb7739b3
-      - input_slider.snapcast_client_b827eb976047
+      - input_number.snapcast_client_study
+      - input_number.snapcast_client_kitchen2
+      - input_number.snapcast_client_lounge
+      - input_number.snapcast_client_library
+      - input_number.snapcast_client_ballroom
+      - input_number.snapcast_client_bedroommark
+      - input_number.snapcast_client_outside
   action:
-    # unmute
-    - service: media_player.volume_mute
-      data_template:
-        entity_id: '{{trigger.entity_id.replace("input_slider", "media_player")}}'
-        is_volume_muted: false
+    # don't unmute by default
+    #- service: media_player.volume_mute
+    #  data_template:
+    #    entity_id: '{{trigger.entity_id.replace("input_number", "media_player")}}'
+    #    is_volume_muted: false
     - service: media_player.volume_set
       data_template:
-        entity_id: '{{trigger.entity_id.replace("input_slider", "media_player")}}'
+        entity_id: '{{trigger.entity_id.replace("input_number", "media_player")}}'
         volume_level: '{{ trigger.to_state.state | float / 100 }}'
 
-- alias: "Update input_slider Volume"
+- alias: update_input_number_volume
   trigger:
     platform: state
     entity_id:
-      - media_player.snapcast_client_00c141020928
-      - media_player.snapcast_client_4ceb42cb0886
-      - media_player.snapcast_client_74c246247a4d
-      - media_player.snapcast_client_80d21d413dff
-      - media_player.snapcast_client_b827eb464b04
-      - media_player.snapcast_client_b827eb7739b3
-      - media_player.snapcast_client_b827eb976047
+      - media_player.snapcast_client_study
+      - media_player.snapcast_client_kitchen2
+      - media_player.snapcast_client_lounge
+      - media_player.snapcast_client_library
+      - media_player.snapcast_client_ballroom
+      - media_player.snapcast_client_bedroommark
+      - media_player.snapcast_client_outside
   action:
-    - service: input_slider.select_value
+    - service: input_number.set_value
       data_template:
-        entity_id: '{{trigger.entity_id.replace("media_player", "input_slider")}}'
+        entity_id: '{{trigger.entity_id.replace("media_player", "input_number")}}'
         value: '{{ trigger.to_state.attributes.volume_level * 100 }}'
 
 
 media_player:
   - platform: snapcast
-    host: hastur
+    host: media
 
   - platform: mpd
-    host: hastur
+    host: media
     location: Multi-Room Controller
 
 group:
@@ -120,30 +115,30 @@ group:
     name: Snapcast Clients
     entities:
     - script.all_rooms_audio
-    #- media_player.snapcast_client_000000000000
-    - media_player.snapcast_client_00c141020928
-    - media_player.snapcast_client_4ceb42cb0886
-    - media_player.snapcast_client_74c246247a4d
-    - media_player.snapcast_client_80d21d413dff
-    - media_player.snapcast_client_b827eb464b04
-    - media_player.snapcast_client_b827eb7739b3
-    - media_player.snapcast_client_b827eb976047
+    - media_player.snapcast_client_study
+    - media_player.snapcast_client_kitchen2
+    - media_player.snapcast_client_lounge
+    - media_player.snapcast_client_library
+    - media_player.snapcast_client_ballroom
+    - media_player.snapcast_client_bedroommark
+    - media_player.snapcast_client_outside
+
   snapclient_sliders:
     name: Snapcast Volume
     entities:
-    - input_slider.snapcast_client_00c141020928
-    - input_slider.snapcast_client_4ceb42cb0886
-    - input_slider.snapcast_client_74c246247a4d
-    - input_slider.snapcast_client_80d21d413dff
-    - input_slider.snapcast_client_b827eb464b04
-    - input_slider.snapcast_client_b827eb7739b3
-    - input_slider.snapcast_client_b827eb976047
+    - input_number.snapcast_client_study
+    - input_number.snapcast_client_kitchen2
+    - input_number.snapcast_client_lounge
+    - input_number.snapcast_client_library
+    - input_number.snapcast_client_ballroom
+    - input_number.snapcast_client_bedroommark
+    - input_number.snapcast_client_outside
 
-tts:
-  - platform: google
-    cache: true
-    cache_dir: /tmp/tts
-    time_memory: 300
+#tts:
+#  - platform: google
+#    cache: true
+#    cache_dir: /tmp/tts
+#    time_memory: 300
 
 script:
   all_rooms_audio:
@@ -154,7 +149,7 @@ script:
       - service: media_player.volume_set
         data:
           entity_id: group.snapclients
-          volume_level: 1.0
+          volume_level: 0.5
       - service: media_player.select_source
         data:
           entity_id: media_player.ballroom_amplifier
