--- a/packages/hall/package.yaml
+++ b/packages/hall/package.yaml
@@ -7,3 +7,4 @@ script: !include_dir_merge_named scripts
 sensor: !include sensors.yaml
 switch: !include switches.yaml
 #automation: !include_dir_merge_list automations
+media_player: !include media_players.yaml
