--- a/packages/kitchen/media_players.yaml
+++ b/packages/kitchen/media_players.yaml
@@ -1,8 +1,9 @@
-- name: Kitchen
-  platform: kodi
-  host: kitchen
-  port: 8080
-
+## Replaced with snapcast
+#- name: Kitchen Kodi
+#  platform: kodi
+#  host: kitchen
+#  port: 8080
+#
 - name: kitchen_speaker
   platform: cast
 
