--- a/device_tracker.yaml
+++ b/device_tracker.yaml
@@ -10,7 +10,7 @@
   max_gps_accuracy: 3000
 
 - platform: nmap_tracker
-  hosts: 192.168.7.1-254
+  hosts: 192.168.6.1-254 192.168.7.1-254
   interval_seconds: 60
   home_interval: 20
   track_new_devices: yes
