--- a/floorplan.yaml
+++ b/floorplan.yaml
@@ -95,6 +95,22 @@ groups:
       - state: 'home'
         class: 'device-on'
 
+  - name: Media Players
+    entities:
+      - media_player.snapcast_client_study
+      - media_player.snapcast_client_kitchen2
+      - media_player.snapcast_client_lounge
+      - media_player.snapcast_client_library
+      - media_player.snapcast_client_ballroom
+      - media_player.snapcast_client_bedroommark
+      - media_player.snapcast_client_outside
+    class_template: '
+      if (entity.attributes.is_volume_muted == false)
+        return "device-on";
+      else
+        return "device-off";
+      '
+
 #        - name: thermostat_temp
 #          entities:
 #            - climate.downstairs
