--- a/floorplan.yaml
+++ b/floorplan.yaml
@@ -14,6 +14,21 @@ warnings:
 
 groups:
 
+  - name: Compact UI Groups
+    entities:
+      - group.study_compact_ui
+      - group.kitchen_compact_ui
+      - group.hall_compact_ui
+      - group.lounge_compact_ui
+      - group.library_compact_ui
+      - group.ballroom_compact_ui
+      - group.bedroom_mark_compact_ui
+      - group.bedroom_jerome_compact_ui
+      - group.bedroom_ros_compact_ui
+      - group.guest_room_compact_ui
+    # Just the first word of the name
+    text_template: '${entity.attributes.friendly_name.replace(/[^\w].*/,"")}'
+
   - name: Thermostats
     entities:
       - climate.annex_hall_thermostat
@@ -28,7 +43,6 @@ groups:
       - climate.bedroom_jerome_thermostat
       - climate.bedroom_ros_thermostat
     text_template: '${entity.attributes.current_temperature != "unknown" ? entity.attributes.current_temperature + "°C" : "?? °C"}'
-    #    var temp = parseFloat(entity.attributes.current_temperature.replace("°C", ""));
     class_template: '
       var temp = parseFloat(entity.attributes.current_temperature);
       if (temp < 5)
