--- a/automation/calendar.yaml
+++ b/automation/calendar.yaml
@@ -16,26 +16,28 @@
     - platform: state
       entity_id: calendar.scene
       to: "on"
-    - platform: state
-      entity_id: calendar.mark_scene
-      to: "on"
-    - platform: state
-      entity_id: calendar.jerome_scene
-      to: "on"
-    - platform: state
-      entity_id: calendar.ros_scene
-      to: "on"
   action:
     - service_template: input_select.select_option
       data_template:
         entity_id: >
           {% set l = trigger.to_state.attributes.message.lower().split() %}
-          {% if "mark" in l %}
-          {%   set u = "bedroom_mark" %}
-          {% elif "jerome" in l %}
-          {%   set u = "bedroom_jerome" %}
-          {% elif "ros" in l %}
-          {%   set u = "bedroom_ros" %}
+          {% if "study" in l %}
+          {%   set u = "study" %}
+          {% elif "kitchen" in l %}
+          {%   set u = "kitchen" %}
+          {% elif "lounge" in l or "sitting" in l or "sittingroom" in l %}
+          {%   set u = "lounge" %}
+          {% elif "library" in l %}
+          {%   set u = "library" %}
+          {% elif "ballroom" in l or "ball" in l %}
+          {%   set u = "ballroom" %}
+          ## hall and annex_hall don't have mode settings
+          #{% elif "hall" in l or "hallway" in l %}
+          #{%   set u = "hall" %}
+          #{% elif "annex" in l or "annex_hall" in l or "annexhall" in l %}
+          #{%   set u = "annex_hall" %}
+          {% elif "guestroom" in l or "guest" in l %}
+          {%   set u = "guest_room" %}
           {% endif %}
           input_select.{{u}}_select
         option: >
@@ -56,12 +58,22 @@
       data_template:
         entity_id: >
           {% set l = trigger.to_state.attributes.message.lower().split() %}
-          {% if "mark" in l %}
-          {%   set u = "bedroom_mark" %}
-          {% elif "jerome" in l %}
-          {%   set u = "bedroom_jerome" %}
-          {% elif "ros" in l %}
-          {%   set u = "bedroom_ros" %}
+          {% if "study" in l %}
+          {%   set u = "study" %}
+          {% elif "kitchen" in l %}
+          {%   set u = "kitchen" %}
+          {% elif "lounge" in l or "sitting" in l or "sittingroom" in l %}
+          {%   set u = "lounge" %}
+          {% elif "library" in l %}
+          {%   set u = "library" %}
+          {% elif "ballroom" in l or "ball" in l %}
+          {%   set u = "ballroom" %}
+          {% elif "hall" in l or "hallway" in l %}
+          {%   set u = "hall" %}
+          {% elif "annex" in l or "annex_hall" in l or "annexhall" in l %}
+          {%   set u = "annex_hall" %}
+          {% elif "guestroom" in l or "guest" in l %}
+          {%   set u = "guest_room" %}
           {% endif %}
           climate.{{u}}_thermostat
         temperature: >
