mode: make set_mode script generic

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -18,6 +18,7 @@ homeassistant:
     package_stream_radio: !include packages/stream-radio.yaml
     package_oil_monitor: !include packages/myolive.yaml
     package_multiroom_audio: !include packages/multiroom_audio.yaml
+    package_mode: !include packages/mode.yaml
 
     package_study: !include packages/study/package.yaml
     package_study_heating: !include packages/study/heating-on-demand.yaml
