--- a/packages/bedroom-mark/groups.yaml
+++ b/packages/bedroom-mark/groups.yaml
@@ -7,16 +7,16 @@ bedroom_mark:
   - climate.bedroom_mark_thermostat
   - group.bedroom_mark_lights
   - group.bedroom_mark_appliances
-  - group.bedroom_mark_scenes
 
 bedroom_mark_compact_ui:
   name: "Mark's Bedroom"
   view: false
   entities:
-  - input_select.bedroom_mark_select
+  - input_select.bedroom_mark_mode
   - climate.bedroom_mark_thermostat
   - group.bedroom_mark_lights
   - group.g_bedroom_mark_media_dimming
+  - group.g_bedroom_mark_settings_ui
 
 bedroom_mark_scenes:
   name: "Mark's Bedroom"
