--- a/packages/study/groups.yaml
+++ b/packages/study/groups.yaml
@@ -12,8 +12,9 @@ study_compact_ui:
   name: Study
   view: false
   entities:
-  - input_select.study_select
+  - input_select.study_mode
   - climate.study_thermostat
+  - group.g_study_settings_ui
 
 study_scenes:
   name: Study
