--- a/packages/kitchen/heating-on-demand.yaml
+++ b/packages/kitchen/heating-on-demand.yaml
@@ -60,6 +60,12 @@ sensor:
     entity_ids:
       - sensor.kitchen_current_temperature
 
+  - platform: template
+    sensors:
+      kitchen_setpoint:
+        value_template: "{{ states.climate.kitchen_thermostat.attributes.temperature }}"
+        unit_of_measurement: "\xB0C"
+
 automation:
   # Redirect received temperatures over mqtt
   - alias: "kitchen_update_temperature"
