--- a/packages/lounge/heating-on-demand.yaml
+++ b/packages/lounge/heating-on-demand.yaml
@@ -60,6 +60,12 @@ sensor:
     entity_ids:
       - sensor.lounge_east_current_temperature
 
+  - platform: template
+    sensors:
+      lounge_setpoint:
+        value_template: "{{ states.climate.lounge_thermostat.attributes.temperature }}"
+        unit_of_measurement: "\xB0C"
+
 automation:
   # Redirect received temperatures over mqtt
   - alias: "lounge_update_temperature"
