--- a/packages/lounge/scenes.yaml
+++ b/packages/lounge/scenes.yaml
@@ -1,32 +1,24 @@
-- name: Lounge Off
+- name: lounge_off
   entities:
     group.lounge_lights:
       state: off
-    climate.lounge_thermostat:
-      temperature: 10
     media_player.lounge:
       state: paused
 
-- name: Lounge Cosy
+- name: lounge_cosy
   entities:
     group.lounge_lights:
       state: on
       brightness_pct: 20
-    climate.lounge_thermostat:
-      temperature: 20
 
-- name: Lounge Movie
-  entities:
-    group.lounge_lights:
-      state: on
-      brightness_pct: 50
-    climate.lounge_thermostat:
-      temperature: 20
-
-- name: Lounge Bright
+- name: lounge_bright
   entities:
     group.lounge_lights:
       state: on
       brightness_pct: 100
-    climate.lounge_thermostat:
-      temperature: 20
+
+- name: lounge_movie
+  entities:
+    group.lounge_lights:
+      state: on
+      brightness_pct: 50
