guest_room: set minimum temperatures to 8C. SpiritZ lower limit

--- a/packages/guest_room/heating-on-demand.yaml
+++ b/packages/guest_room/heating-on-demand.yaml
@@ -33,7 +33,7 @@ climate:
     heater: switch.guest_room_demand
     target_sensor: sensor.guest_room_mean_temperature
     max_temp: 25
-    min_temp: 5
+    min_temp: 8  # spirit-Z minimum
     target_temp: 10.0
 
 switch:
