--- a/packages/bedroom-ros/heating-on-demand.yaml
+++ b/packages/bedroom-ros/heating-on-demand.yaml
@@ -60,6 +60,13 @@ sensor:
     entity_ids:
       - sensor.bedroom_ros_current_temperature
 
+  - platform: template
+    sensors:
+      bedroom_ros_setpoint:
+        value_template: "{{ states.climate.bedroom_ros_thermostat.attributes.temperature }}"
+        unit_of_measurement: "\xB0C"
+
+
 automation:
   # Redirect received temperatures over mqtt
   - alias: "bedroom_ros_update_temperature"
