--- a/packages/guest_room/groups.yaml
+++ b/packages/guest_room/groups.yaml
@@ -11,8 +11,9 @@ guest_room_compact_ui:
   view: false
   icon: mdi:hotel
   entities:
-  - input_select.guest_room_select
+  - input_select.guest_room_mode
   - climate.guest_room_thermostat
+  - group.g_guest_room_settings_ui
 
 guest_room_scenes:
   name: Guest Room
