--- a/packages/bedroom-ros/package.yaml
+++ b/packages/bedroom-ros/package.yaml
@@ -1,7 +1,7 @@
 homeassistant: !include homeassistant.yaml
 group: !include groups.yaml
 #climate: !include climate.yaml
-input_select: !include input_select.yaml
+#input_select: !include input_select.yaml
 scene: !include scenes.yaml
 script: !include_dir_merge_named scripts
 sensor: !include sensors.yaml
