--- a/packages/bedroom-ros/mode.yaml
+++ b/packages/bedroom-ros/mode.yaml
@@ -12,7 +12,7 @@ homeassistant:
 
 input_select:
   bedroom_ros_mode:
-    name: Mode
+    name: "Ros's Bedroom Mode"
     options:
       - 'Off'
       - 'Sleep'
