--- a/packages/study/scenes.yaml
+++ b/packages/study/scenes.yaml
@@ -4,6 +4,8 @@
       state: off
     media_player.study:
       state: paused
+    media_player.snapcast_client_study:
+      is_volume_muted: true
 
 - name: study_cosy
   entities:
